@@ -2,6 +2,7 @@
 v4.1.0-git
 ----------
 
+[jan] Fix incorrect dependencies.
 
 
 -----------
